# revela

./: .gitignore  Cargo.toml  Changelog.md  README.md
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml  safety.yml
DOCS/: CHANGELOG.md  LICENSES.md
examples/: alloc.rs  no_std_no_alloc_libc.rs  ui-crossterm.rs  ui-notcurses.rs
src/: Lib.md  canvas.rs  error.rs  lib.rs  window.rs
src/_info/: features.md
src/backend/: alloc.rs  backend.rs  gilrs.rs  midir.rs  mod.rs  no_std.rs  text.rs  window.rs
src/backend/capabilities/: color.rs  input.rs  mod.rs  pixel.rs  sound.rs  system.rs  text_grid.rs  window.rs
src/backend/crossterm/: backend.rs  events.rs  mod.rs
src/backend/gilrs/: mod.rs
src/backend/notcurses/: backend.rs  canvas.rs  capabilities.rs  events.rs  mod.rs  text.rs  text_grid.rs  ui.rs
src/backend/sdl2/: backend.rs  canvas.rs  events.rs  mod.rs
src/core/: backend.rs  mod.rs  text.rs  ui.rs  window.rs
src/core/events/: gamepad.rs  keyboard.rs  midi.rs  mod.rs  window.rs
src/core/events/keys/: mod.rs  mods.rs
src/error/: flume.rs  kira.rs  midir.rs  mod.rs
src/event/: event.rs  gamepad.rs  midi.rs  mod.rs  mouse.rs  time.rs  window.rs
src/event/keys/: code.rs  mod.rs  mods.rs
src/events/: gamepad.rs  mod.rs  mouse.rs  time.rs  window.rs
src/events/keys/: code.rs
src/layout/: clamper.rs  distance.rs  mod.rs  position.rs  size.rs  zone.rs
src/visual/: canvas.rs  mod.rs  text_grid.rs  window.rs
src/visual/layout/: clamper.rs  mod.rs  position.rs  size.rs  zone.rs
